--- a/Achievements.css
+++ b/Achievements.css
@@ -4,6 +4,16 @@ body{
 	background-color: white; 
 }
   
+.nav-items {
+  display: flex;
+  flex-direction: column;
+}
+
+/* Optionally, add some styling for better spacing between items */
+.nav-item {
+  margin-bottom: 10px;
+}
+  
   /* Style for top logo */
   #top-left {
 	position: absolute;
@@ -15,6 +25,13 @@ body{
 	padding: 20px;
 	gap: 10px;
 	text-align: left;
+	color: black;
+	/*new code*/
+	/* Add a background color */
+  background-color: #f9f9f9;
+  border-radius: 10px;
+  /* Add some box shadow for depth */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   .blog-start  .container {
 	
@@ -49,12 +66,14 @@ body{
 	width: 30%;
 	height: 500px;
 	margin: 20px;
+	padding: 20px;
 	display: inline-block;
-	background-color: #3b67ad; /* blue */
+	background: linear-gradient(to bottom, #4B9CD3, #004792);
+	/*background-color: #3b67ad; /* blue */
 	color: #fff; /* white */
 	text-align: center;
 	vertical-align: middle;
-	box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
   
   .block:nth-child(odd) {
@@ -127,8 +146,9 @@ body{
 	padding-bottom: 20px;
   }
   .achievements_heading{
-	background-color: #222020;
-	color: #9b1515;
+	/*background-color: #222020;*/
+	background: linear-gradient(to right, #222020, #444);
+	color: #fff;
 	margin-top: 20px;
 	display: flex;
 	justify-content: space-between;
@@ -136,6 +156,7 @@ body{
 	text-align: center;
 	height: 10px;
 	padding: 20px;
+	border-radius: 10px;
   }
   
   
